--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -1,31 +1,128 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
 body {
-    font-family: Lato, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color: #777777;
-    padding: 30px;
-}
+  font-family: Lato, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px; }
 
 .header {
-    height: 95vh;
-    background-image: linear-gradient(to right, rgba(40, 180, 133, 0.8), rgba(126, 213, 111, 0.8)) ,url("../img/hero.jpg");
-    background-size: contain;
-    background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%) ;
-}
+  position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-size: contain;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+
+.logo-box {
+  position: absolute;
+  left: 40px;
+  top: 40px; }
+  .logo-box .logo {
+    height: 35px; }
+
+.text-box {
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
+  .text-box .heading-primary {
+    color: #fff;
+    text-transform: uppercase;
+    backface-visibility: hidden;
+    margin-bottom: 60px; }
+    .text-box .heading-primary-main {
+      display: block;
+      font-size: 60px;
+      font-weight: 400;
+      letter-spacing: 35px;
+      animation-name: moveInLeft;
+      animation-timing-function: ease-out;
+      animation-duration: 1s; }
+    .text-box .heading-primary-sub {
+      display: block;
+      font-size: 20px;
+      font-weight: 700;
+      letter-spacing: 17.4px;
+      animation-name: moveInRight;
+      animation-timing-function: ease-out;
+      animation-duration: 1s; }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); }
+  80% {
+    transform: translateX(10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); }
+  80% {
+    transform: translateX(-10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+.btn:link, .btn:visited {
+  position: relative;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  font-size: 16px;
+  transition: all 200ms;
+  border-radius: 100px; }
+  .btn:link:hover, .btn:visited:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2); }
+    .btn:link:hover::after, .btn:visited:hover::after {
+      transition: all 400ms;
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0; }
+  .btn:link:active, .btn:visited:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2); }
+
+.btn-white {
+  background-color: #fff;
+  color: #777; }
+  .btn-white::after {
+    background-color: #fff; }
+
+.btn::after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; }
+
+.btn-animated {
+  animation: moveUp;
+  animation-timing-function: ease-out;
+  animation-duration: 500ms;
+  animation-delay: 750ms;
+  animation-fill-mode: backwards; }
+
+@keyframes moveUp {
+  0% {
+    transform: translateY(60px);
+    opacity: 0;
+    visibility: hidden; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
