--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -1,3 +1,32 @@
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); }
+  80% {
+    transform: translateX(10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); }
+  80% {
+    transform: translateX(-10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveUp {
+  0% {
+    transform: translateY(60px);
+    opacity: 0;
+    visibility: hidden; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+
 * {
   margin: 0;
   padding: 0;
@@ -11,20 +40,34 @@ body {
   color: #777;
   padding: 30px; }
 
-.header {
-  position: relative;
-  height: 95vh;
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
-  background-size: contain;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); }
+  80% {
+    transform: translateX(10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
-.logo-box {
-  position: absolute;
-  left: 40px;
-  top: 40px; }
-  .logo-box .logo {
-    height: 35px; }
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); }
+  80% {
+    transform: translateX(-10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveUp {
+  0% {
+    transform: translateY(60px);
+    opacity: 0;
+    visibility: hidden; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
 
 .text-box {
   position: absolute;
@@ -74,6 +117,15 @@ body {
     opacity: 1;
     transform: translateX(0); } }
 
+@keyframes moveUp {
+  0% {
+    transform: translateY(60px);
+    opacity: 0;
+    visibility: hidden; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+
 .btn:link, .btn:visited {
   position: relative;
   text-transform: uppercase;
@@ -118,6 +170,26 @@ body {
   animation-delay: 750ms;
   animation-fill-mode: backwards; }
 
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px); }
+  80% {
+    transform: translateX(10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px); }
+  80% {
+    transform: translateX(-10px); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
 @keyframes moveUp {
   0% {
     transform: translateY(60px);
@@ -126,3 +198,18 @@ body {
   100% {
     transform: translateY(0);
     opacity: 1; } }
+
+.header {
+  position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-size: contain;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+
+.logo-box {
+  position: absolute;
+  left: 40px;
+  top: 40px; }
+  .logo-box .logo {
+    height: 35px; }
