added home section

--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -3,5 +3,8 @@ $primary-light-color: #7ed56f;
 $primary-dark-color: #28b485;
 $color-white: #fff;
 $color-dark: #777;
+$color-black: #000;
+
+$color-grey-light-1: #f7f7f7;
 
 $box-shadow: 0 5px 20px rgba(0,0,0,0.2);
