--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -32,14 +32,6 @@
   padding: 0;
   box-sizing: border-box; }
 
-body {
-  font-family: Lato, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.7;
-  color: #777;
-  padding: 30px; }
-
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -69,6 +61,14 @@ body {
     transform: translateY(0);
     opacity: 1; } }
 
+body {
+  font-family: Lato, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px; }
+
 .text-box {
   position: absolute;
   left: 50%;
@@ -96,6 +96,9 @@ body {
       animation-name: moveInRight;
       animation-timing-function: ease-out;
       animation-duration: 1s; }
+
+.u-text-center {
+  text-align: center; }
 
 @keyframes moveInLeft {
   0% {
@@ -213,3 +216,30 @@ body {
   top: 40px; }
   .logo-box .logo {
     height: 35px; }
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem; }
+
+.col-1-of-2 {
+  width: calc((100% - 1rem)/2); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 15rem 0;
+  margin-top: -20vh; }
+
+.heading-secondary {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all 0.2s ease-out; }
+  .heading-secondary:hover {
+    transform: skewX(10deg) skewY(2deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
