--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -100,6 +100,9 @@ body {
 .u-text-center {
   text-align: center; }
 
+.u-margin-bottom-5 {
+  margin-bottom: 5rem; }
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
