--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -97,11 +97,29 @@ body {
       animation-timing-function: ease-out;
       animation-duration: 1s; }
 
+.tertiary-heading {
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: left; }
+
+.paragraph {
+  font-size: 1.2rem;
+  text-align: left; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
 .u-text-center {
   text-align: center; }
 
-.u-margin-bottom-5 {
+.u-margin-bottom-big {
   margin-bottom: 5rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 3rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1rem; }
 
 @keyframes moveInLeft {
   0% {
@@ -176,6 +194,26 @@ body {
   animation-delay: 750ms;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.2rem;
+  font-weight: 700;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  text-decoration: none;
+  color: #55c57a;
+  display: inline-block; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transition: all 0.3s;
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -227,7 +265,8 @@ body {
   gap: 3rem; }
 
 .col-1-of-2 {
-  width: calc((100% - 1rem)/2); }
+  width: calc((90% - 1rem)/2);
+  text-align: left; }
 
 .section-about {
   background-color: #f7f7f7;
