--- a/Natours/starter/sass/base/_utilities.scss
+++ b/Natours/starter/sass/base/_utilities.scss
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
-.u-margin-bottom-5 {
+.u-margin-bottom-big {
   margin-bottom: 5rem;
+}
+
+.u-margin-bottom-medium {
+  margin-bottom: 3rem;
+}
+
+.u-margin-bottom-small {
+  margin-bottom: 1rem;
 }
